--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,5 @@
 @import "tailwindcss";
+@custom-variant dark (&:where(.dark, .dark *));
 
 .logo.vite:hover {
   filter: drop-shadow(0 0 2em #747bff);
